[gd_scene load_steps=11 format=3 uid="uid://clkc6lptr5uxy"]

[ext_resource type="PackedScene" uid="uid://bkua8rte7t7jv" path="res://Assets/models/glass.glb" id="1_pyhl2"]
[ext_resource type="Script" uid="uid://75tjksjisnb0" path="res://Project/Items/glas.gd" id="2_a2nsn"]
[ext_resource type="Material" uid="uid://ccpo5t520vg1d" path="res://Project/Helper/outline_mat.tres" id="3_cnhjm"]
[ext_resource type="PackedScene" uid="uid://diphy5t2nd0ve" path="res://Project/Items/glass_liquid.tscn" id="3_fu540"]
[ext_resource type="Material" uid="uid://b1gs6anxli8d1" path="res://Project/Helper/telelporter_mat.tres" id="4_58n25"]
[ext_resource type="AudioStream" uid="uid://cxw3610yvnm5l" path="res://Assets/Sounds/snd_warp_out.wav" id="6_k4d0w"]
[ext_resource type="AudioStream" uid="uid://cd63k8jhnkgej" path="res://Assets/Sounds/snd_warp_in.wav" id="7_4trxr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pyhl2"]
transparency = 1
blend_mode = 4
depth_draw_mode = 1
albedo_color = Color(0.72549, 0.984314, 0.968627, 0.258824)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_58n25"]
height = 0.09600825
radius = 0.048828125

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cnhjm"]
height = 0.13275146
radius = 0.07470703

[node name="glass" node_paths=PackedStringArray("glass_liquid", "mesh", "warp_out", "warp_in", "spoil_timer") groups=["Glass", "GlassPlaceable", "Pickupable"] instance=ExtResource("1_pyhl2")]
script = ExtResource("2_a2nsn")
glass_liquid = NodePath("glass_liquid")
mesh = NodePath("Cylinder")
warp_out = NodePath("Audio/warp_out")
warp_in = NodePath("Audio/warp_in")
outline_mat = ExtResource("3_cnhjm")
teleport_mat = ExtResource("4_58n25")
spoil_timer = NodePath("SpoilTimer")

[node name="Cylinder" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
surface_material_override/0 = SubResource("StandardMaterial3D_pyhl2")

[node name="RigidBody3D" type="RigidBody3D" parent="Cylinder" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cylinder/RigidBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0007629022, 0)
shape = SubResource("CylinderShape3D_58n25")

[node name="glass_liquid" parent="." index="1" instance=ExtResource("3_fu540")]

[node name="Area3D" type="Area3D" parent="." index="2"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00051379204, 0.062347412, 0)
shape = SubResource("CylinderShape3D_cnhjm")

[node name="Audio" type="Node3D" parent="." index="3"]

[node name="warp_out" type="AudioStreamPlayer3D" parent="Audio" index="0"]
stream = ExtResource("6_k4d0w")
volume_db = -20.0
unit_size = 5.0
max_db = 1.0
pitch_scale = 1.5

[node name="warp_in" type="AudioStreamPlayer3D" parent="Audio" index="1"]
stream = ExtResource("7_4trxr")
volume_db = -20.0
unit_size = 5.0
max_db = 1.0
pitch_scale = 1.5

[node name="SpoilTimer" type="Timer" parent="." index="4"]

[connection signal="timeout" from="SpoilTimer" to="." method="_on_spoil_timer_timeout"]
